# fraction-math

./: CMakeLists.txt  README.md
include/: fraction-math.hh
src/: fraction-math.cc  main.cc
